8212625: Remove --echo-mode and related code
Submitten-by: almatvee

Reviewed-by: herrick